docs: fix and improve package manager tab spacing

--- a/apps/docs/theme/components/PackageManagerTabs/index.css
+++ b/apps/docs/theme/components/PackageManagerTabs/index.css
@@ -2,4 +2,9 @@
   border: 1px solid var(--rp-c-divider);
   border-radius: var(--rp-radius);
   background-color: var(--rp-code-block-bg);
+  margin-block: 20px;
+}
+
+.package-manager-tabs > div {
+  margin-block: 0;
 }
